--- a/ZYSideSlipFilter/Base.lproj/Main.storyboard
+++ b/ZYSideSlipFilter/Base.lproj/Main.storyboard
@@ -39,6 +39,9 @@
                                 <state key="normal" title="筛选">
                                     <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="clickFilterButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SxO-KZ-LEN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
