--- a/ZYSideSlipFilter/Classes/View/TableViewCell/SideSlipCommonTableViewCell.xib
+++ b/ZYSideSlipFilter/Classes/View/TableViewCell/SideSlipCommonTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SideSlipCommonTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SideSlipCommonTableViewCell" id="KGk-i7-Jjw" customClass="SideSlipCommonTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -34,8 +34,9 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="eeV-5C-Bih">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="eeV-5C-Bih">
                         <rect key="frame" x="8" y="42" width="304" height="49.5"/>
+                        <color key="backgroundColor" red="0.35686274509999999" green="0.45098039220000002" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VV3-i9-efz">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -43,8 +44,8 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <connections>
-                            <outlet property="dataSource" destination="-1" id="q1z-SG-EF2"/>
-                            <outlet property="delegate" destination="-1" id="V5W-0L-MT2"/>
+                            <outlet property="dataSource" destination="-1" id="30R-lA-bPz"/>
+                            <outlet property="delegate" destination="-1" id="3Yv-LT-7WT"/>
                         </connections>
                     </collectionView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hpk-fT-CBc">
@@ -81,7 +82,7 @@
             <connections>
                 <outlet property="controlIcon" destination="1Y8-as-n4L" id="XxA-ep-dYn"/>
                 <outlet property="controlLabel" destination="38I-02-wdR" id="kEg-Qm-jZx"/>
-                <outlet property="mainCollectionview" destination="eeV-5C-Bih" id="gEs-7L-nPS"/>
+                <outlet property="mainCollectionView" destination="eeV-5C-Bih" id="Cfa-Je-FB5"/>
                 <outlet property="titleLabel" destination="LqK-EA-JiO" id="rox-qS-jU1"/>
             </connections>
         </tableViewCell>
