完成基本显示

--- a/ZYSideSlipFilter/Classes/Model/FilterCommonCollectionViewCell.xib
+++ b/ZYSideSlipFilter/Classes/Model/FilterCommonCollectionViewCell.xib
@@ -7,14 +7,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FilterCommonCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="120" height="40"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilterCommonCollectionViewCell" id="gTV-IL-0wX" customClass="FilterCommonCollectionViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="80" height="20"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="120" height="40"/>
+                <rect key="frame" x="0.0" y="0.0" width="80" height="20"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mlq-8g-sLB">
-                        <rect key="frame" x="37.5" y="3" width="45" height="34"/>
+                        <rect key="frame" x="23" y="-4" width="34" height="28"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <state key="normal" title="name">
                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
