1.完成item的选择与记录 2.更改数据源数据结构，引入CommonItemModel

--- a/ZYSideSlipFilter/Classes/Model/FilterCommonCollectionViewCell.xib
+++ b/ZYSideSlipFilter/Classes/Model/FilterCommonCollectionViewCell.xib
@@ -13,7 +13,7 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="80" height="20"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mlq-8g-sLB">
+                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mlq-8g-sLB">
                         <rect key="frame" x="23" y="-4" width="34" height="28"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <state key="normal" title="name">
@@ -23,7 +23,7 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
-            <color key="backgroundColor" red="0.73333333329999995" green="0.73333333329999995" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="Mlq-8g-sLB" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="k0X-7O-VLT"/>
                 <constraint firstItem="Mlq-8g-sLB" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="l3J-fb-ZrU"/>
